--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "tinacms dev -c \"next dev\"",
-    "build": "tinacms build && next build",
-    "start": "tinacms build && next start",
-    "export": "npm run build && next export",
-    "lint": "next lint",
-    "dev:build": "next build"
+    "dev": "tinacms dev -c \"hugo server -D\"",
+    "build": "tinacms build && hugo",
+    "start": "tinacms build && hugo server"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
